--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,75 @@
+:root {
+	--bs-primary: #003B6D;
+	--bs-secondary: #BDBDBD;
+	--bs-secondary-2: #676767;
+}
+
+.btn-primary {
+	background-color: var(--bs-primary);
+}
+
+.btn:first-child:active, .btn:hover {
+	background-color: #002A4E !important; 
+}
+.nav-link {
+	font-weight: 500;
+	color: var(--bs-secondary-2);
+	letter-spacing: 0.1em;
+}
+
+.nav-link.active {
+	font-weight: 600;
+	color: var(--bs-primary) !important;
+}
+
+.nav-link.active::after {
+	content: '';
+	display: block;
+	width: 60%;
+	height: 2px;
+	background-color: var(--bs-primary);
+}
+
+.navbar-nav a {
+	margin-right: 0.25em;
+}
+
+.navbar-nav h5 {
+	margin-bottom: 0;
+}
+
 #navbar-logo {
 	height: 3.5rem;
 }
 
 #navbar-container {
-	background-color: #BDBDBD;
+	background-color: rgb(189, 189, 189, 0.6);
 	padding-left: 0.5em;
+}
+
+#search-bar svg {
+	padding-bottom: 0.10em;
+}
+
+#search-bar {
+	align-items: stretch;
+}
+
+#search-bar .btn {
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+#search-bar .form-control {
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+#search-bar input::placeholder {
+	font-size: 1.2em;
+}
+  
+#search-bar .form-control:focus,
+#search-bar .btn:focus {
+	box-shadow: none;
 }
