--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,21 +11,30 @@
 .btn:first-child:active, .btn:hover {
 	background-color: #002A4E !important; 
 }
+
 .nav-link {
 	font-weight: 500;
 	color: var(--bs-secondary-2);
 	letter-spacing: 0.1em;
 }
 
-.nav-link.active {
+.nav-link.active{
 	font-weight: 600;
 	color: var(--bs-primary) !important;
 }
 
-.nav-link.active::after {
+.nav-link.active.desktop::after {
 	content: '';
 	display: block;
 	width: 60%;
+	height: 2px;
+	background-color: var(--bs-primary);
+}
+
+.nav-link.active.mobile::after {
+	content: '';
+	display: block;
+	width: 20%;
 	height: 2px;
 	background-color: var(--bs-primary);
 }
