removing br's in favor of bootstrap, adding image for flare on desktop

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -133,3 +133,9 @@
 .app {
 	height: 100vh !important;
 }
+
+h5 {
+	font-weight: 500;
+	color: var(--bs-primary) !important;
+	letter-spacing: 0.1em;
+}
